--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
   <script src="https://d3js.org/d3-selection-multi.v1.js"></script>
+  <script src="https://unpkg.com/d3-simple-slider"></script>
 
 
 </head>
@@ -27,7 +28,7 @@
 
   <div class="container-fluid" >
       <div class="row" id='info' style='font-size:16px'>
-        <div id="options" class="col-lg-8">
+        <div id="options" class="col-lg-9">
           <span>
         <label>Network Type</label>
         <select id="topo_option">
@@ -52,9 +53,27 @@
           <option value="mbps3">15</option>
         </select>
       </span>
+      <label>Traffic Threshold:</label>
+      <span id="value-alternative-handle1">0.00</span><span id="slider-alternative-handle1"></span>
+      <label>Delay Threshold:</label>
+      <span id="value-alternative-handle2" >0.00</span><span id="slider-alternative-handle2"></span>
+      <br>
       <span><button type="button" id ='loadTraffic' class="btn btn-primary">Load Traffic Graph</button></span>
+      <span> <button type="button" id ='generateDelay' class="btn btn-primary">Generate Delay</button></span>
     </div>
+    <!-- <div id="buttons-all" class="col-lg-3">
 
+    </div> -->
+
+    <div id=instructions class="col-lg-3">
+      Instructions:
+      <ul>
+        <li>Select appropritate variables from the dropdown menus and click on "Load Traffic".</li>
+        <li>Click on "Generate Delay" to generate delay graph and matrix.</li>
+        <li>Click on the table cell on Traffic Matrix to edit the traffic for that particular edge.</li>
+        <li>Click on the a node on the Traffic Graph to stop generating traffic from that node. </li>
+        </ul
+    </div>
       </div>
       <div class="row" id='main'>
 
@@ -73,7 +92,6 @@
               <div id="table_data">
               <table id ="traffic_mat" class="table table-striped table-bordered"></table>
             </div>
-            <button type="button" id ='generateDelay' class="btn btn-primary">Generate Delay</button>
             <br>
             <div id="control-center">
                <input type="text" id="newValue" placeholder="Enter new traffic value" value="">
