--- a/templates/index.html
+++ b/templates/index.html
@@ -46,12 +46,8 @@
         </select>
       </span>
       <span>
-        <label>Link bandwidth:</label>
-        <select id="bw_option">
-          <option value="mbps1">5</option>
-          <option value="mbps2">10</option>
-          <option value="mbps3">15</option>
-        </select>
+        <label>Bandwidth:</label>
+        5 MBPS
       </span>
       <label>Traffic Threshold:</label>
       <span id="value-alternative-handle1">0.00</span><span id="slider-alternative-handle1"></span>
@@ -60,6 +56,7 @@
       <br>
       <span><button type="button" id ='loadTraffic' class="btn btn-primary">Load Traffic Graph</button></span>
       <span> <button type="button" id ='generateDelay' class="btn btn-primary">Generate Delay</button></span>
+      <span> <button type="button" id ='updateThreshold' class="btn btn-primary">Update Threshold</button></span>
     </div>
     <!-- <div id="buttons-all" class="col-lg-3">
 
